--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -16,20 +16,38 @@
 }
 
 /*   Immagini nella show   */
+
+
+
 .show-main-img {
     border-radius: 10px;
 }
 
+.gallery-item {
+    position: relative;
+
+    .delete-img {
+
+        position: absolute;
+        top: 0;
+        right: 15px;
+
+
+        .delete-img-btn {
+            background-color: rgba($color: #000000, $alpha: 0.5);
+        }
+    }
+
+}
+
 .show-figure {
     height: 125px;
-    width: 230px;
+    width: 100%;
     border-radius: 10px;
 
     img {
         height: 100%;
         width: 100%;
-        object-fit: cover;
-        object-position: center top;
     }
 }
 
