--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -104,3 +104,17 @@
 #dropdown-profile {
     height: fit-content;
 }
+
+// Icone index
+.table {
+    i {
+        font-size: 20px;
+    }
+}
+
+
+// !    BOH
+//body {
+//    height: 100vh;
+//    background-image: linear-gradient(to bottom, #68c9f8 10%, white 63%);
+//}
