--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 
+// !    POSSIBILE PALETTE COLORI GENERALE?
+body {
+    height: 100vh;
+    background-image: linear-gradient(to bottom, #68c9f8 10%, white 63%);
+}
 
 /*  Immagini nella index    */
 .index-figure {
@@ -87,10 +92,10 @@
     &::after {
         content: '';
         height: 4px;
-        background-color: grey;
+        background-color: #52bdf2;
         border-radius: 4px;
         position: absolute;
-        bottom: 0;
+        bottom: 2px;
         left: 0;
         right: 0;
     }
@@ -105,16 +110,29 @@
     height: fit-content;
 }
 
-// Icone index
+#index-title {
+    font-family: "Arial", sans-serif;
+    color: white;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+// Regole tabella
 .table {
+
     i {
         font-size: 20px;
     }
+
+    thead {
+        --bs-table-bg: rgb(13, 110, 253);
+    }
+
+    thead th:first-child {
+        border-top-left-radius: 15px;
+    }
+
+    thead th:last-child {
+        border-top-right-radius: 15px;
+    }
 }
-
-
-// !    BOH
-//body {
-//    height: 100vh;
-//    background-image: linear-gradient(to bottom, #68c9f8 10%, white 63%);
-//}
