--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,10 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 
 // !    POSSIBILE PALETTE COLORI GENERALE?
-body {
+/*body {
     height: 100vh;
     background-image: linear-gradient(to bottom, #68c9f8 10%, white 63%);
-}
+}*/
 
 /*  Immagini nella index    */
 .index-figure {
