--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -110,12 +110,12 @@
     height: fit-content;
 }
 
-#index-title {
+/*#index-title {
     font-family: "Arial", sans-serif;
     color: white;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
+}*/
 
 // Regole tabella
 .table {
