--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -141,3 +141,9 @@
         -webkit-text-stroke-width: 1px;
     }
 }
+
+// Servizi nel form
+
+#services-wrapper.form-control {
+    width: fit-content;
+}
