added sidebar style

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,10 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 
 // !    POSSIBILE PALETTE COLORI GENERALE?
-/*body {
+body {
     height: 100vh;
-    background-image: linear-gradient(to bottom, #68c9f8 10%, white 63%);
-}*/
+    background-color: rgb(218, 234, 238);
+}
 
 /*  Immagini nella index    */
 .index-figure {
@@ -73,7 +73,8 @@
 
 /*   Navbar   */
 .navbar {
-    height: 60px;
+    height: 80px;
+    font-weight: bold;
 
     * {
         height: 100%;
@@ -83,6 +84,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    img {
+        width: 155px;
+        height: 135px;
+    }
+
+    span {
+        background: linear-gradient(to right, #0E485B, #4BC9E4);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
     }
 }
 
@@ -140,4 +153,41 @@
         -webkit-text-stroke-color: #000000;
         -webkit-text-stroke-width: 1px;
     }
+}
+
+
+// Sidebar
+
+#sidebar {
+    flex-basis: 15%;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(80, 80, 80);
+    background-color: white;
+    box-shadow: 5px 0px 5px rgba(163, 163, 163, 0.2);
+
+    ul {
+        list-style-type: none;
+
+        li {
+            margin-bottom: 4rem;
+        }
+    }
+}
+
+main {
+    flex-basis: 70%;
+    flex-grow: 1;
+    overflow: auto;
+}
+
+.main-content {
+    height: calc(100vh - 80px);
+    display: flex;
+    overflow: auto;
 }
