--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -138,7 +138,7 @@ body {
     }
 
     thead {
-        --bs-table-bg: rgb(13, 110, 253);
+        --bs-table-bg: #0E485B;
     }
 
     thead th:first-child {
@@ -167,7 +167,7 @@ body {
 
     font-size: 1.2rem;
     font-weight: bold;
-    color: rgb(80, 80, 80);
+    color: #0E485B;
     background-color: white;
     box-shadow: 5px 0px 5px rgba(163, 163, 163, 0.2);
 
