--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -105,10 +105,6 @@ body {
         left: auto;
     }
 
-    * {
-        height: 100%;
-    }
-
     a {
         display: flex;
         justify-content: center;
@@ -190,13 +186,13 @@ body {
         --bs-table-bg: #0E485B;
     }
 
-    thead th:first-child {
-        border-top-left-radius: 15px;
-    }
+    // thead th:first-child {
+    //     border-top-left-radius: 15px;
+    // }
 
-    thead th:last-child {
-        border-top-right-radius: 15px;
-    }
+    // thead th:last-child {
+    //     border-top-right-radius: 15px;
+    // }
 
     .icon-border {
         -webkit-text-stroke-color: #000000;
@@ -207,12 +203,10 @@ body {
 // Sidebar
 
 #sidebar {
-    flex-basis: 15%;
     flex-shrink: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-
+    padding: 15px 0px;
     font-size: 1.2rem;
     font-weight: bold;
     color: #0E485B;
@@ -225,10 +219,10 @@ body {
 
         li {
             margin-bottom: 4rem;
+        }
 
-            a {
-                padding: 0 30px;
-            }
+        a {
+            padding: 5px;
         }
     }
 }
