--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -79,22 +79,72 @@ body {
 }
 
 .gallery-item {
-    position: relative;
+    .show-figure {
 
-    .delete-img {
+        position: relative;
 
-        position: absolute;
-        top: 0;
-        right: 15px;
+        .delete-img {
+
+            position: absolute;
+            top: 0;
+            right: 0px;
 
 
-        .delete-img-btn {
-            background-color: rgba($color: #000000, $alpha: 0.5);
+            .delete-img-btn {
+                background-color: rgba($color: #000000, $alpha: 0.5);
+            }
+
+            .delete-img-btn:hover {
+                background-color: rgba($color: #000000, $alpha: 1);
+                transform: scale(1.2);
+            }
         }
     }
 
 }
 
+#show-gallery {
+    scroll-behavior: smooth;
+    overflow-x: auto;
+
+
+    #gallery-prev,
+    #gallery-next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    #gallery-prev {
+        left: -25px;
+    }
+
+    #gallery-next {
+        right: 0;
+    }
+}
+
+/* Assicura che la scrollbar sia visibile solo quando necessario */
+#show-gallery::-webkit-scrollbar {
+    height: 8px;
+    /* Altezza della scrollbar */
+    width: 8px;
+    /* Larghezza della scrollbar */
+}
+
+#show-gallery::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    /* Colore del thumb */
+    border-radius: 4px;
+    /* Bordi arrotondati */
+}
+
+#show-gallery::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.1);
+    /* Colore della track */
+}
+
+/* ----------- Fine Galleria ----------- */
 .infos {
 
     p {
